<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/right_menu_RxJava"
            android:checked="false"
            android:title="@string/right_menu_RxJava"/>
        <item
            android:id="@+id/right_menu_IntentService"
            android:checked="false"
            android:title="@string/right_menu_IntentService"/>
        <item
            android:id="@+id/right_menu_aidl"
            android:checked="false"
            android:title="@string/right_menu_aidl"/>
        <item
            android:id="@+id/right_menu_binder"
            android:checked="false"
            android:title="@string/right_menu_binder"/>
        <item
            android:id="@+id/right_menu_droidplugin"
            android:checked="false"
            android:title="@string/right_menu_DroidPlugin"/>
    </group>

</menu>
